// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertCard should match snapshot 1`] = `
<div>
  <header
    id="main-header"
  />
  <section
    class="css-1f0bq0k"
  >
    <div
      class="css-1ygcbpf"
    >
      <div
        class="css-shs5m8"
      >
        <a
          aria-label="Link to Alert"
          class="css-13sy0ai"
          href="/log-analysis/alerts/f67b8f04-5fac-404a-93a4-38db29f258ba/"
        >
          <h4
            class="css-s55j3t"
          >
            indexing
          </h4>
        </a>
        <div
          class="css-p6ovoi"
        >
          <dl
            class="css-1wli741"
          >
            <dd
              aria-labelledby="undefinedobject-object"
              class="css-ehqwas"
            >
              <a
                class="css-ly3lze"
                href="/log-analysis/rules/6eb9c948-5a13-4955-bd91-b98801b55bed/"
              >
                <span
                  aria-label="Link to Rule"
                  class="css-175i5p"
                  type="button"
                >
                  View Rule
                </span>
              </a>
            </dd>
          </dl>
          <dl
            class="css-1wli741"
          >
            <dt
              aria-labelledby="destinationsobject-object"
              class="css-15fs2ry"
            >
              Destinations
            </dt>
            <dd
              aria-labelledby="destinationsobject-object"
              class="css-ehqwas"
            >
              <div
                class="css-1t0imtl"
              >
                <svg
                  aria-label="Loading..."
                  class="css-1fkvngm"
                  viewBox="0 0 150 150"
                >
                  <circle
                    class="css-1j56u6z"
                    color="current"
                    cx="75"
                    cy="75"
                    r="60"
                  />
                </svg>
              </div>
            </dd>
          </dl>
          <dl
            class="css-1wli741"
          >
            <dt
              aria-labelledby="log-typesobject-object"
              class="css-15fs2ry"
            >
              Log Types
            </dt>
            <dd
              aria-labelledby="log-typesobject-object"
              class="css-ehqwas"
            >
              <div
                class="css-jfghd6"
              >
                <div
                  class="css-6yqme3"
                >
                  <span
                    class="css-uhy5q3"
                  />
                  <span
                    class="css-1oztiic"
                  >
                    Costa Rica
                  </span>
                </div>
              </div>
            </dd>
          </dl>
          <dl
            class="css-1wli741"
          >
            <dt
              aria-labelledby="events670"
              class="css-15fs2ry"
            >
              Events
            </dt>
            <dd
              aria-labelledby="events670"
              class="css-ehqwas"
            >
              670
            </dd>
          </dl>
          <dl
            class="css-1wli741"
          >
            <dt
              aria-labelledby="time-created2020-08-08-1215-gmt"
              class="css-15fs2ry"
            >
              Time Created
            </dt>
            <dd
              aria-labelledby="time-created2020-08-08-1215-gmt"
              class="css-ehqwas"
            >
              2020-08-08 12:15 GMT
            </dd>
          </dl>
          <div
            class="css-16r6lkr"
          >
            <div
              aria-atomic="true"
              class="css-1xnpqmn"
              role="status"
            >
              MEDIUM
            </div>
            <div
              class="css-cbi22q"
            >
              <div
                class="css-f274z1"
              >
                <div
                  aria-atomic="true"
                  class="css-1vb5dnc"
                  role="status"
                >
                  TRIAGED
                </div>
              </div>
              <div
                aria-controls="menu--1"
                aria-haspopup="true"
                class="css-mvl7pn"
                data-reach-menu-button=""
                id="menu-button--menu--1"
                type="button"
              >
                <button
                  aria-label="Change Alert Status"
                  aria-pressed="false"
                  class="css-1l1qeqt"
                  type="button"
                >
                  <svg
                    class="css-ngvb10"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10L12 15L17 10H7Z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <footer
    id="footer"
  />
</div>
`;

exports[`AlertCard should not display link to Rule 1`] = `
<div>
  <header
    id="main-header"
  />
  <section
    class="css-1f0bq0k"
  >
    <div
      class="css-1ygcbpf"
    >
      <div
        class="css-shs5m8"
      >
        <a
          aria-label="Link to Alert"
          class="css-13sy0ai"
          href="/log-analysis/alerts/f67b8f04-5fac-404a-93a4-38db29f258ba/"
        >
          <h4
            class="css-s55j3t"
          >
            indexing
          </h4>
        </a>
        <div
          class="css-p6ovoi"
        >
          <dl
            class="css-1wli741"
          >
            <dt
              aria-labelledby="destinationsobject-object"
              class="css-15fs2ry"
            >
              Destinations
            </dt>
            <dd
              aria-labelledby="destinationsobject-object"
              class="css-ehqwas"
            >
              <div
                class="css-1t0imtl"
              >
                <svg
                  aria-label="Loading..."
                  class="css-1fkvngm"
                  viewBox="0 0 150 150"
                >
                  <circle
                    class="css-1j56u6z"
                    color="current"
                    cx="75"
                    cy="75"
                    r="60"
                  />
                </svg>
              </div>
            </dd>
          </dl>
          <dl
            class="css-1wli741"
          >
            <dt
              aria-labelledby="log-typesobject-object"
              class="css-15fs2ry"
            >
              Log Types
            </dt>
            <dd
              aria-labelledby="log-typesobject-object"
              class="css-ehqwas"
            >
              <div
                class="css-jfghd6"
              >
                <div
                  class="css-6yqme3"
                >
                  <span
                    class="css-uhy5q3"
                  />
                  <span
                    class="css-1oztiic"
                  >
                    Costa Rica
                  </span>
                </div>
              </div>
            </dd>
          </dl>
          <dl
            class="css-1wli741"
          >
            <dt
              aria-labelledby="events670"
              class="css-15fs2ry"
            >
              Events
            </dt>
            <dd
              aria-labelledby="events670"
              class="css-ehqwas"
            >
              670
            </dd>
          </dl>
          <dl
            class="css-1wli741"
          >
            <dt
              aria-labelledby="time-created2020-08-08-1215-gmt"
              class="css-15fs2ry"
            >
              Time Created
            </dt>
            <dd
              aria-labelledby="time-created2020-08-08-1215-gmt"
              class="css-ehqwas"
            >
              2020-08-08 12:15 GMT
            </dd>
          </dl>
          <div
            class="css-16r6lkr"
          >
            <div
              aria-atomic="true"
              class="css-1xnpqmn"
              role="status"
            >
              MEDIUM
            </div>
            <div
              class="css-cbi22q"
            >
              <div
                class="css-f274z1"
              >
                <div
                  aria-atomic="true"
                  class="css-1vb5dnc"
                  role="status"
                >
                  TRIAGED
                </div>
              </div>
              <div
                aria-controls="menu--13"
                aria-haspopup="true"
                class="css-mvl7pn"
                data-reach-menu-button=""
                id="menu-button--menu--13"
                type="button"
              >
                <button
                  aria-label="Change Alert Status"
                  aria-pressed="false"
                  class="css-1l1qeqt"
                  type="button"
                >
                  <svg
                    class="css-ngvb10"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10L12 15L17 10H7Z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <footer
    id="footer"
  />
</div>
`;

exports[`AlertCard should render alert destinations logos 1`] = `
<div>
  <header
    id="main-header"
  />
  <section
    class="css-1f0bq0k"
  >
    <div
      class="css-1ygcbpf"
    >
      <div
        class="css-shs5m8"
      >
        <a
          aria-label="Link to Alert"
          class="css-13sy0ai"
          href="/log-analysis/alerts/f67b8f04-5fac-404a-93a4-38db29f258ba/"
        >
          <h4
            class="css-s55j3t"
          >
            indexing
          </h4>
        </a>
        <div
          class="css-p6ovoi"
        >
          <dl
            class="css-1wli741"
          >
            <dd
              aria-labelledby="undefinedobject-object"
              class="css-ehqwas"
            >
              <a
                class="css-ly3lze"
                href="/log-analysis/rules/6eb9c948-5a13-4955-bd91-b98801b55bed/"
              >
                <span
                  aria-label="Link to Rule"
                  class="css-175i5p"
                  type="button"
                >
                  View Rule
                </span>
              </a>
            </dd>
          </dl>
          <dl
            class="css-1wli741"
          >
            <dt
              aria-labelledby="destinationsobject-object"
              class="css-15fs2ry"
            >
              Destinations
            </dt>
            <dd
              aria-labelledby="destinationsobject-object"
              class="css-ehqwas"
            >
              <div
                class="css-udayh7"
              >
                <img
                  alt="slack logo"
                  class="css-aebbrg"
                  height="24"
                  src="test-file-stub"
                  width="24"
                />
              </div>
            </dd>
          </dl>
          <dl
            class="css-1wli741"
          >
            <dt
              aria-labelledby="log-typesobject-object"
              class="css-15fs2ry"
            >
              Log Types
            </dt>
            <dd
              aria-labelledby="log-typesobject-object"
              class="css-ehqwas"
            >
              <div
                class="css-jfghd6"
              >
                <div
                  class="css-6yqme3"
                >
                  <span
                    class="css-uhy5q3"
                  />
                  <span
                    class="css-1oztiic"
                  >
                    Costa Rica
                  </span>
                </div>
              </div>
            </dd>
          </dl>
          <dl
            class="css-1wli741"
          >
            <dt
              aria-labelledby="events670"
              class="css-15fs2ry"
            >
              Events
            </dt>
            <dd
              aria-labelledby="events670"
              class="css-ehqwas"
            >
              670
            </dd>
          </dl>
          <dl
            class="css-1wli741"
          >
            <dt
              aria-labelledby="time-created2020-08-08-1215-gmt"
              class="css-15fs2ry"
            >
              Time Created
            </dt>
            <dd
              aria-labelledby="time-created2020-08-08-1215-gmt"
              class="css-ehqwas"
            >
              2020-08-08 12:15 GMT
            </dd>
          </dl>
          <div
            class="css-16r6lkr"
          >
            <div
              aria-atomic="true"
              class="css-1xnpqmn"
              role="status"
            >
              MEDIUM
            </div>
            <div
              class="css-cbi22q"
            >
              <div
                class="css-f274z1"
              >
                <div
                  aria-atomic="true"
                  class="css-1vb5dnc"
                  role="status"
                >
                  TRIAGED
                </div>
              </div>
              <div
                aria-controls="menu--25"
                aria-haspopup="true"
                class="css-mvl7pn"
                data-reach-menu-button=""
                id="menu-button--menu--25"
                type="button"
              >
                <button
                  aria-label="Change Alert Status"
                  aria-pressed="false"
                  class="css-1l1qeqt"
                  type="button"
                >
                  <svg
                    class="css-ngvb10"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10L12 15L17 10H7Z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <footer
    id="footer"
  />
</div>
`;

exports[`AlertCard should render message that destination delivery is failing 1`] = `
<div>
  <header
    id="main-header"
  />
  <section
    class="css-1f0bq0k"
  >
    <div
      class="css-1ygcbpf"
    >
      <div
        class="css-shs5m8"
      >
        <a
          aria-label="Link to Alert"
          class="css-13sy0ai"
          href="/log-analysis/alerts/f67b8f04-5fac-404a-93a4-38db29f258ba/"
        >
          <h4
            class="css-s55j3t"
          >
            indexing
          </h4>
        </a>
        <div
          class="css-p6ovoi"
        >
          <dl
            class="css-1wli741"
          >
            <dd
              aria-labelledby="undefinedobject-object"
              class="css-ehqwas"
            >
              <a
                class="css-ly3lze"
                href="/log-analysis/rules/6eb9c948-5a13-4955-bd91-b98801b55bed/"
              >
                <span
                  aria-label="Link to Rule"
                  class="css-175i5p"
                  type="button"
                >
                  View Rule
                </span>
              </a>
            </dd>
          </dl>
          <dl
            class="css-1wli741"
          >
            <dt
              aria-labelledby="destinationsobject-object"
              class="css-15fs2ry"
            >
              Destinations
            </dt>
            <dd
              aria-labelledby="destinationsobject-object"
              class="css-ehqwas"
            >
              <div
                class="css-udayh7"
              >
                <img
                  alt="slack logo"
                  class="css-aebbrg"
                  height="24"
                  src="test-file-stub"
                  width="24"
                />
              </div>
            </dd>
          </dl>
          <dl
            class="css-1wli741"
          >
            <dt
              aria-labelledby="log-typesobject-object"
              class="css-15fs2ry"
            >
              Log Types
            </dt>
            <dd
              aria-labelledby="log-typesobject-object"
              class="css-ehqwas"
            >
              <div
                class="css-jfghd6"
              >
                <div
                  class="css-6yqme3"
                >
                  <span
                    class="css-uhy5q3"
                  />
                  <span
                    class="css-1oztiic"
                  >
                    Costa Rica
                  </span>
                </div>
              </div>
            </dd>
          </dl>
          <dl
            class="css-1wli741"
          >
            <dt
              aria-labelledby="events670"
              class="css-15fs2ry"
            >
              Events
            </dt>
            <dd
              aria-labelledby="events670"
              class="css-ehqwas"
            >
              670
            </dd>
          </dl>
          <dl
            class="css-1wli741"
          >
            <dt
              aria-labelledby="time-created2020-08-08-1215-gmt"
              class="css-15fs2ry"
            >
              Time Created
            </dt>
            <dd
              aria-labelledby="time-created2020-08-08-1215-gmt"
              class="css-ehqwas"
            >
              2020-08-08 12:15 GMT
            </dd>
          </dl>
          <div
            class="css-16r6lkr"
          >
            <div
              aria-atomic="true"
              class="css-1xnpqmn"
              role="status"
            >
              MEDIUM
            </div>
            <div
              class="css-cbi22q"
            >
              <div
                class="css-f274z1"
              >
                <div
                  aria-atomic="true"
                  class="css-1vb5dnc"
                  role="status"
                >
                  TRIAGED
                </div>
              </div>
              <div
                aria-controls="menu--30"
                aria-haspopup="true"
                class="css-mvl7pn"
                data-reach-menu-button=""
                id="menu-button--menu--30"
                type="button"
              >
                <button
                  aria-label="Change Alert Status"
                  aria-pressed="false"
                  class="css-1l1qeqt"
                  type="button"
                >
                  <svg
                    class="css-ngvb10"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10L12 15L17 10H7Z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <section
          aria-label="Destination delivery failure"
          class="css-1xkbneh"
        >
          <svg
            class="css-13rgkj"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2 C17.5228475,2 22,6.4771525 22,12 C22,17.5228475 17.5228475,22 12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 Z M13,15.5 L11,15.5 L11,17.5 L13,17.5 L13,15.5 Z M13,7 L11,7 L11,14 L13,14 L13,7 Z"
            />
          </svg>
          <p
            class="css-uwklb0"
          >
            There was an issue with the delivery of this alert to a selected destination. See specific Alert for details.
          </p>
        </section>
      </div>
    </div>
  </section>
  <footer
    id="footer"
  />
</div>
`;
